<resources>
    <string name="app_name">MahaNews</string>
    <string name="api_key">37259dbaed224f6e92eae53d85e45097</string>
    <string name="todo">TODO</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="todo1">TODO</string>
</resources>