<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

<!-- Horizontal scroll view for categories-->
    <HorizontalScrollView
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
<!--            Every text in button is capitalized if error occurs then write it as business,...-->
            <Button
                android:id="@+id/btn_1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/business"
                android:background="@drawable/transparent_bg_bordered_button"
                android:textColor="#FF6200EE"
                android:textSize="12sp">

            </Button>

            <Button
                android:id="@+id/btn_2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/entertainment"
                android:textSize="12sp"
                android:background="@drawable/transparent_bg_bordered_button"
                android:textColor="#FF6200EE"
                tools:ignore="TextContrastCheck">

            </Button>

            <Button
                android:id="@+id/btn_3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/general"
                android:background="@drawable/transparent_bg_bordered_button"
                android:textColor="#FF6200EE"
                android:textSize="12sp">

            </Button>

            <Button
                android:id="@+id/btn_4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/health"
                android:background="@drawable/transparent_bg_bordered_button"
                android:textColor="#FF6200EE"
                android:textSize="12sp">

            </Button>

            <Button
                android:id="@+id/btn_5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/science"
                android:background="@drawable/transparent_bg_bordered_button"
                android:textColor="#FF6200EE"
                android:textSize="12sp">

            </Button>

            <Button
                android:id="@+id/btn_6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/sports"
                android:background="@drawable/transparent_bg_bordered_button"
                android:textColor="#FF6200EE"
                android:textSize="12sp">

            </Button>
            <Button
                android:id="@+id/btn_7"
                android:text="@string/technology"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:background="@drawable/transparent_bg_bordered_button"
                android:textColor="#FF6200EE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle">

            </Button>
        </LinearLayout>

    </HorizontalScrollView>

<!--    For Search bar-->
    <androidx.cardview.widget.CardView
        android:layout_margin="14dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            app:defaultQueryHint="Search News..."
            app:iconifiedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </androidx.appcompat.widget.SearchView>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.appcompat.widget.LinearLayoutCompat>